--- a/themes/hugo-clarity/layouts/partials/favicon.html
+++ b/themes/hugo-clarity/layouts/partials/favicon.html
@@ -1,6 +1,17 @@
+
 <link rel="apple-touch-icon" sizes="180x180" href='{{ absURL "icons/apple-touch-icon.png" }}'>
 <link rel="icon" type="image/png" sizes="32x32" href='{{ absURL "icons/favicon-32x32.png" }}'>
 <link rel="manifest" href='{{ absURL "icons/site.webmanifest" }}'>
 <link rel="mask-icon" href='{{ absURL "safari-pinned-tab.svg" }}' color="#002538">
 <meta name="msapplication-TileColor" content="#002538">
 <meta name="theme-color" content="#002538">
+
+<!--
+<link rel="apple-touch-icon" sizes="180x180" href='{{ absURL "icons/apple-touch-icon.png" }}'>
+<link rel="icon" type="image/png" sizes="32x32" href='{{ absURL "icons/favicon-32x32.png" }}'>
+<link rel="icon" type="image/png" sizes="16x16" href='{{ absURL"/favicon-16x16.png" }}'>
+<link rel="manifest" href='{{ absURL "icons/site.webmanifest" }}'>
+<link rel="mask-icon" href='{{ absURL "safari-pinned-tab.svg" }}' color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+-->
