--- a/themes/hugo-clarity/layouts/partials/head.html
+++ b/themes/hugo-clarity/layouts/partials/head.html
@@ -15,6 +15,9 @@
   <meta name="google-site-verification" content="{{ . }}">
 {{- end }}
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+{{ template "_internal/google_analytics.html" . }}
+
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 {{- if (ne hugo.Environment "development") }}
   {{- partial "analytics" . }}
