--- a/themes/hugo-clarity/layouts/partials/header.html
+++ b/themes/hugo-clarity/layouts/partials/header.html
@@ -43,5 +43,18 @@
       {{- end }}
       {{- partial "follow" . }}
     </div>
+    <div class="nav_search">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@algolia/algoliasearch-netlify-frontend@1/dist/algoliasearchNetlify.css" />
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@algolia/algoliasearch-netlify-frontend@1/dist/algoliasearchNetlify.js"></script>
+        <script type="text/javascript">
+          algoliasearchNetlify({
+            appId: 'DMTSNUJQ6V',
+            apiKey: '<YOUR_ALGOLIA_SEARCH_API_KEY>',
+            siteId: 'b473efe7-db42-4414-9a82-a4e432df6fdd',
+            branch: 'master',
+            selector: 'div#search',
+          });
+        </script>
+      </div>
   </nav>
 </header>
